Finish the documentation about authentication
